Fix text wrap in `NoteAnnotation`

--- a/styles/templates/_noteAnnotation.scss
+++ b/styles/templates/_noteAnnotation.scss
@@ -50,7 +50,7 @@
     padding: 10px;
     font-size: 18px;
     outline: none;
-    word-break: break-all;
+    overflow-wrap: break-word;
     pointer-events: none;
   
     text-align: center;
